place images, plot maps, fixes from Hols across the site

--- a/_pages/roadtrip/big-one/index.html
+++ b/_pages/roadtrip/big-one/index.html
@@ -1,7 +1,7 @@
 ---
 layout: roadtrip
 id: big-one
-title: The Big One
+title: Colourful culture and remarkable scenery
 group: roadtrip
 group-order: 1
 
@@ -10,7 +10,7 @@ group-order: 1
 video-id: U-qSEc4Aqm8
 
 banner:
-  title: The Big One
+  title: Colourful culture and remarkable scenery
 
 
 
@@ -18,11 +18,10 @@ roadtrip:
 
   title: Johannesburg to Durban
   meta:
-    journey: Johannesburg to Durbin
-    distance: 500 miles
-    time: 2 days
+    distance: 650 miles
+    time: 7 days
   intro: >
-    <p class="text--lg">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
+    <p class="text--lg">Head from up-and-coming Jo’Burg to hip Durban, catching bucket-list activities and fascinating landscapes as you pass. With everything from the Big Five to unmissable historical spots, this trip offers a diverse range of unique, South African experiences. For a taste of real South Africa, hire a car and hit the road.</p>
   waypoints:
 
     - title: Johannesburg
@@ -32,7 +31,6 @@ roadtrip:
         - title: Liliesleaf Farm
         - title: Constitution Hill
         - title: Apartheid Museum
-        - title: Nelson Mandela’s house
       content: >
         <p>Begin your adventure in Jo’burg. This vibrant city has gone from strength-to-strength in recent years, reinventing itself into a cultural mecca for hip South Africans and savvy travellers. Maboneng is a shining example, a bastion of urban renewal that offers cool galleries promoting local artists, street food halls packed with local artisans, and the kind of atmosphere that is utterly addictive.</p>
         <p>Liliesleaf Farm, Constitution Hill and the Apartheid Museum are exceptional archives of the Freedom Struggle in Johannesburg. Head to the Soweto township to see Mandela’s house, before soaking up the joyful atmosphere and unmissable eats of Soweto’s excellent restaurants. Discover live jazz and kota, endeared by the warm welcome you’ll receive in this celebrated community. </p>
@@ -42,8 +40,8 @@ roadtrip:
       id: isandlwana
       drive-distance: 30 miles drive from Isandlwana
       highlights:
-        - title: Highlight 1
-        - title: Highlight 2
+        - title: Rorke’s Drift
+        - title: Horseback tours
       content: >
         <p>Ever seen Zulu? The 1964 epic is probably the most familiar reference to this area’s pivotal historic past. It does, however, neglect to paint the full picture of that fateful day. The start of the Anglo-Zulu War began with the Battle of Isandlwana, a decisive victory for the Zulu due to a series of blunders and underestimation of the Zulu by the British. In a bid for aggressive colonisation, the British suffered their worst defeat at the hands of native Africans. Following the battle, a 4,000 strong band of Zulu, against the orders of their own king, decided to hunt the remaining forces to Rorke’s Drift. A bloody standoff ensued, with around 150 defending the garrison against a vast Zulu attack – a heroic battle that the British, against all the odds, managed to win.</p>
         <p>It was, of course, a lucky diversion for Britain, offering at least some propaganda following the disaster at Isandlwana. The battles were excuse enough to launch a proper invasion into the region, marking the beginning of the end of the Zulu Kingdom as it then stood.</p>
@@ -54,20 +52,20 @@ roadtrip:
       id: hluhluwe
       drive-distance: 30 miles drive from Hluhluwe
       highlights:
-        - title: Highlight 1
-        - title: Highlight 2
+        - title: iSimangaliso Wetland Park
+        - title: DumaZulu Traditional Village
       content: >
         <p>This charming village nestles itself between the iSimangaliso Wetland Park and Hluhluwe–iMfolozi Park, a perfect gatekeeper for both. The surrounding region is a true outdoor lover’s paradise and rather less-travelled than South Africa’s more famous safari routes. </p>
         <p>The game reserves that surround Hluhluwe are serious rivals to the better-known reserves like those in Kruger. Lesser-known means less busy, which in-itself could suggest a more intimate glimpse at South Africa’s fascinating wildlife. It’s also home to the oldest game reserve in the country, plus the setting for the first rhino preservation effort to stave off extinction. You can catch the Big Five here, with stays in glorious lodges perfect for getting to the heart of the action. Our team stayed in the Phinda Reserve, which has exclusive access to off-trail adventures – not typical of other reserves where safaris must stick to the trails.</p>
         <p>Just south of the village lies the DumaZulu Traditional Village, a place to immerse yourself in the Zulu culture of the KwaZulu-Natal region. You’ll be treated to a traditional Zulu village experience, with dance displays and other immersive experiences that help to teach the heritage of the indigenous people in this part of South Africa. Taste Zulu beer and hear Zulu drums, learning about the culture of this fascinating people. </p>
-        <p>North and east of Hluhluwe sots the long stretch of iSimangaliso Wetland. Your next stop makes a great stop for exploring this unique landscape...</p>
+        <p>North and east of Hluhluwe sits the long stretch of iSimangaliso Wetland. Your next destination is a great stop for exploring this unique landscape...</p>
 
     - title: St Lucia
       id: st-lucia
       drive-distance: 30 miles drive from St Lucia
       highlights:
-        - title: Highlight 1
-        - title: Highlight 2
+        - title: iGwalagwala Trail
+        - title: Cape Vidal Snorkelling
       content: >
         <p>Here, in the heart of the wetlands estuary, St Lucia is a true gem. From here, you can explore the unique topography of the surrounding area, with the warm Indian Ocean on one side and the vast, eponymous lake stretching far into the north. The highest concentration of hippos and crocodiles reside in the outlying wetlands, which also teems with a host of other remarkable wildlife. Take a boat or a self-drive tour of the area, or stick close to the ocean and spot the dolphins and whales which play in the warm waters from mid-June to November. </p>
         <p>Horse safaris and walks along the iGwalagwala Trail add to the myriad of ways to explore this fascinating area. Take a kayak to the water, spot the birdlife that sails across the wetlands, or head to Cape Vidal for great snorkelling opportunities at low tide. The beaches are veritable idylls, pulling the crowds in the summer. Yet for all its popularity, the area around St Lucia remains an unspoilt paradise for those that love untouched outdoor scenes.</p>
@@ -81,8 +79,9 @@ roadtrip:
     - title: Durban
       id: durban
       highlights:
-        - title: Highlight 1
-        - title: Highlight 2
+        - title: The Golden Mile
+        - title: Markets
+        - title: Indie design culture
       content: >
         <p>South Africa’s third-largest city is a hotbed of cultural diversity, with a vast Indian population that has shaped a unique identity along this glorious coastline. Often overlooked for the safaris and wine regions, Durban offers an authentic slice of South African life. It’s here that the markets buzz with activity, that foodie delights are abundant, that music and culture take centre stage. </p>
         <p>Discover the Golden Mile, Durban’s famous stretch of beach that has become something of a mecca for surfers the world over. The waters are far warmer than those in Cape Town, making the city a true beach destination. In the city, discover the technicolour spice markets, where a myriad of colourful pyramids – with equally colourful names (Mother-in-Law Hellfire anyone?) – add a thick aroma to the buzzing place. Try the famous Durban curries and bunny chow, or discover a healthy street-food scene that builds on Durban’s diverse culinary offerings. Indie designers create cool Durban designs in a host of boutiques, art remains a DIY operation with galleries springing up frequently, and local crafts and culture are displayed in packed markets. </p>
