--- a/_pages/explore/index.html
+++ b/_pages/explore/index.html
@@ -8,8 +8,7 @@ group-id: explore
 
 banner:
   title: Explore
-  intro: >
-    <p class="text--xl">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+  intro:
 
 
 ---
