--- a/_pages/index.html
+++ b/_pages/index.html
@@ -63,10 +63,10 @@ banner:
 
 
 
-<div class="section offers-banner vpad--xxxl" style="background-image: url({{site.baseurl}}/img/bg/offers.jpg);">
+<div class="section offers-banner vpad--xxxl" style="background-image: url({{site.baseurl}}/img/offers-banner.jpg);">
   <div class="row row--padding text--center text--white">
   <h3 class="title title--xxxl title--upper title--bold">Travel Offers</h3>
-  <p class="text--xl">Nullam quis risus eget urna mollis ornare vel eu leo. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+  <p class="text--xl">South Africa is often described as an entire world in one country, and with so many incredible experiences to be had this year, now is the time to visit. Browse our offers on regional tours and sumptuous stays at top-end hotels.</p>
   <a href="{{site.baseurl}}/offers" class="btn btn--solid">View South Africa offers</a>
   </div>
 </div>
