--- a/_pages/roadtrip/index.html
+++ b/_pages/roadtrip/index.html
@@ -9,7 +9,7 @@ group-id: roadtrip
 banner:
   title: Roadtrips
   intro: >
-    <p class="text--xl">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+    <p class="text--xl">Discover the real South Africa with our guide to the best road trips across the country. From breathtaking outdoor wonders to fascinating cultural experiences, road tripping across this beguiling land makes for an unforgettable adventure.</p>
 
 
 ---
@@ -30,7 +30,7 @@ banner:
                 <li><p><span class="text--bold">Length:</span> {{group-page.roadtrip.meta.distance}} / {{group-page.meta.time}}</p></li>
               </ul>
             </div>
-            <div class="bg-img__bg" style="background-image: url({{site.baseurl}}/img/bg/{{group-page.id}}-nav.jpg);"></div>
+            <div class="bg-img__bg" style="background-image: url({{site.baseurl}}/img/content/{{group-page.id}}/nav.jpg);"></div>
           </a>
         </div>
       {% endif %}
