--- a/_pages/roadtrip/panorama-route/index.html
+++ b/_pages/roadtrip/panorama-route/index.html
@@ -1,14 +1,14 @@
 ---
 layout: roadtrip
 id: panorama-route
-title: The Panorama Route
+title: Dramatic landscapes and quaint towns
 group: roadtrip
 group-order: 3
 
 
 
 banner:
-  title: The Panorama Route
+  title: Dramatic landscapes and quaint towns
 
 
 
@@ -16,20 +16,16 @@ roadtrip:
 
   title: Pilgrim’s Rest to Kruger
   meta:
-    journey: Pilgrim’s Rest to Kruger
-    distance: 500 miles
-    time: 2 days
+    distance: 270 miles
+    time: 4 days
   intro: >
-    <p class="text--lg">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
+    <p class="text--lg">Explore the natural drama of South Africa’s far north, with a road trip that winds through the enigmatic Blyde River Canyon, before a self-drive safari through Africa’s largest game reserve – Kruger National Park. If you love the great outdoors, explore the aptly named Panorama Route before hunting for a glimpse at the Big Five... </p>
   waypoints:
 
     - title: Pilgrim’s Rest
       id: pilgrims-rest
       drive-distance: 30 miles drive
       highlights:
-        - title: Highlight
-        - title: Highlight
-        - title: Highlight
       content: >
         <p>This protected provincial heritage site offers you the chance to step back in time, to an age where gold rushes made fortunes and shattered dreams. The town grew around the discovery of alluvial gold, initially (and unsurprisingly) kept a secret by Alex Patterson in 1873. The secret got out and prospectors rushed to unpick the treasures of the land. A town quickly sprang to satiate the needs of the gold rush and its frontier-style buildings remain unchanged. Now, explore a range of arts & crafts shops, restaurants and photogenic churches at this quaint rest stop.</p>
 
@@ -37,9 +33,9 @@ roadtrip:
       id: graskop
       drive-distance: 30 miles drive
       highlights:
-        - title: Highlight
-        - title: Highlight
-        - title: Highlight
+        - title: Blyde River Canyon
+        - title: Big Swing
+        - title: Graskop Gorge Lift
       content: >
         <p>Gateway to Blyde River Canyon, Graskop is a charming small town that many use as basecamp for exploring the outdoor delights that lie north. Sit on the terraces of its restaurants as you plan your route through the dramatic outdoors. In the immediate surrounds you’ll discover adrenaline-fuelled excitement at the Big Swing and Graskop Gorge Lift, plus a selection of excellent hikes. </p>
         <hr>
@@ -50,9 +46,7 @@ roadtrip:
       id: gods-window
       drive-distance: 30 miles drive
       highlights:
-        - title: Highlight
-        - title: Highlight
-        - title: Highlight
+        - title: Spot the Taita Falcon
       content: >
         <p>God’s Window, just north of Graskop,  is one such example. In the southern part of the valley lies this famous beauty spot, where the views of the valley extend into the horizon. It’s by no means the only place for a great view; travel the length of the canyon and be sure to stop and explore on foot. In doing so, you’ll discover private settings with unique views – if you’re lucky, you may even sight the rare Taita Falcon.  </p>
 
@@ -60,9 +54,9 @@ roadtrip:
       id: waterfalls
       drive-distance: 30 miles drive
       highlights:
-        - title: Highlight
-        - title: Highlight
-        - title: Highlight
+        - title: Lisbon Waterfall
+        - title: Berlin Waterfall
+        - title: Mac Mac Waterfall
       content: >
         <p>Around the southern part of the canyon you’ll also stumble upon three glorious waterfalls – the Lisbon, Berlin and Mac Mac. They’re a  highlight of any journey through Blyde River Canyon, so don’t miss their enchanting majesty and drama. </p>
 
@@ -70,9 +64,6 @@ roadtrip:
       id: bourkes-luck-potholes
       drive-distance: 30 miles drive
       highlights:
-        - title: Highlight
-        - title: Highlight
-        - title: Highlight
       content: >
         <p>Further up the valley from God’s Window lie Bourke’s Luck Potholes, a rather odd name for a rather enigmatic natural sight. This craterous landscape lies at the bottom of the deep gorge that forms the river canyon, with a collection of, well, potholes tucked deep into the foot of the gorge. Explore this oddity through a series of paths and bridges that offer great viewpoints over and above the holes. </p>
 
@@ -80,21 +71,18 @@ roadtrip:
       id: three-rondavels
       drive-distance: 30 miles drive
       highlights:
-        - title: Highlight
-        - title: Highlight
-        - title: Highlight
+        - title: Viewpoint
       content: >
         <p>These towering peaks form one of the most famous sights in the river canyon. Named after the round, domed homesteads of rural South Africa, these vast pinnacles are a geological wonder. Also known as the chief and his three wives, the structures are woven into the folklore of the region. Numerous viewpoints offer lofty panorama over this beguiling scene. Take a moment to soak it up.</p>
 
     - title: Kruger self-drive Safari
-      id: kruger-self-drive-safari
-      drive-distance: 30 miles drive
+      id: kruger
       highlights:
-        - title: Highlight
-        - title: Highlight
-        - title: Highlight
+        - title: The Big Five
+        - title: Satara Camp
+        - title: Tshokwane
       content: >
-        <p>Head east from Blyde River Canyon into the heart of Kruger National Park. Heading for Satara Camp, the road winds through this rugged land where you’ll be able to spot all sorts of bucket-list wildlife. Kruger is home to the Big Five – sticking close to the river you may catch a host of wildlife gathering at water holes, and potentially the odd kill being feasted on by the roving predators of the park. There’s plenty of game reserves to visit that offer guided tours and the southern part of Kruger hosts some seriously luxurious lodges for respite in the wilds. The end of the road leads to Satara Camp, one of many in the park, from where you can head south to Tshokwane and west to Skukuza, creating a loop that takes you into the heart of this wild landscape. </p>
+        <p>Head east from Blyde River Canyon into the heart of <a href="#roadtrip" data-marker-id="kruger" class="js-map-link text--bolder">Kruger National Park</a>. Heading for <a href="#roadtrip" data-marker-id="satara-camp" class="js-map-link text--bolder">Satara Camp</a>, the road winds through this rugged land where you’ll be able to spot all sorts of bucket-list wildlife. Kruger is home to the Big Five – sticking close to the river you may catch a host of wildlife gathering at water holes, and potentially the odd kill being feasted on by the roving predators of the park. There’s plenty of game reserves to visit that offer guided tours and the southern part of Kruger hosts some seriously luxurious lodges for respite in the wilds. The end of the road leads to Satara Camp, one of many in the park, from where you can head south to <a href="#roadtrip" data-marker-id="tshokwane" class="js-map-link text--bolder">Tshokwane</a> and west to Skukuza, creating a loop that takes you into the heart of this wild landscape. Follow the road out of the park toward <a href="#roadtrip" data-marker-id="hazyview" class="js-map-link text--bolder">Hazyview to finish your Kruger adventure</a>.</p>
 
 
 
