--- a/_pages/roadtrip/capetown-portelizabeth/index.html
+++ b/_pages/roadtrip/capetown-portelizabeth/index.html
@@ -1,7 +1,7 @@
 ---
 layout: roadtrip
 id: capetown-portelizabeth
-title: Winelands and golden coastline
+title: Cape Town to Port Elizabeth
 group: roadtrip
 group-order: 2
 
@@ -24,7 +24,6 @@ roadtrip:
 
     - title: Cape Town
       id: cape-town
-      drive-distance: 30 miles drive
       highlights:
         - title: Bo-Kaap
         - title: East City and Woodstock
@@ -35,7 +34,6 @@ roadtrip:
 
     - title: Winelands
       id: winelands
-      drive-distance: 30 miles drive
       highlights:
         - title: Cape Winelands
         - title: Paarl
@@ -45,7 +43,6 @@ roadtrip:
 
     - title: Mossel Bay
       id: mossel-bay
-      drive-distance: 30 miles drive
       highlights:
         - title: Hartenbos Beach
       content: >
@@ -53,7 +50,6 @@ roadtrip:
 
     - title: Wilderness
       id: wilderness
-      drive-distance: 30 miles drive
       highlights:
         - title: Victoria Bay
         - title: Dolphin’s Point
@@ -62,7 +58,6 @@ roadtrip:
 
     - title: Plettenberg safari
       id: plettenberg-safari
-      drive-distance: 30 miles drive
       highlights:
         - title: Game Reserve
         - title: Horseback rides
@@ -71,7 +66,6 @@ roadtrip:
 
     - title: Nature’s Valley
       id: natures-valley
-      drive-distance: 30 miles drive
       highlights:
         - title: Blourkran’s Bridge
       content: >
