--- a/_pages/roadtrip/index.html
+++ b/_pages/roadtrip/index.html
@@ -22,15 +22,15 @@ banner:
     {% for group-page in group-pages %}
       {% if group-page.group == page.group-id %}
         <div class="col">
-          <a href="{{site.baseurl}}{{group-page.url}}" class="roadtrip-tile roadtrip-tile--large bg-img bg-img--1-1 bg-img--lg-3-4 bg-img--rounded bg-img--shadow bg--grey-darkest">
+          <a href="{{site.baseurl}}{{group-page.url}}" class="roadtrip-tile roadtrip-tile--large bg-img bg-img--1-1 bg-img--lg-2-3 bg-img--xl-3-4 bg-img--rounded bg-img--shadow bg--grey-darkest">
             <div class="roadtrip-tile__content text--white">
 
               <h4 class="title title--super title--xxxs title--bold">{{group-page.roadtrip.title}}</h4>
-              <h3 class="title title--md">{{group-page.title}}</h3>
+              <h3 class="title title--sm">{{group-page.title}}</h3>
 
               <ul class="list--lined">
                 <li><p><span class="text--bold">Time:</span> {{group-page.roadtrip.meta.time}}</p></li>
-                <li><p><span class="text--bold">Distance:</span> {{group-page.roadtrip.meta.distance}} / {{group-page.meta.time}}</p></li>
+                <li><p><span class="text--bold">Distance:</span> {{group-page.roadtrip.meta.distance}}</p></li>
               </ul>
             </div>
             <div class="bg-img__bg" style="background-image: url({{site.baseurl}}/img/content/{{group-page.id}}/nav.jpg);"></div>
@@ -41,4 +41,9 @@ banner:
   </div>
 </div>
 
+
+
+
+
+{% include page/offers-banner.html %}
 
