--- a/_pages/roadtrip/johannesburg-durban/index.html
+++ b/_pages/roadtrip/johannesburg-durban/index.html
@@ -1,7 +1,7 @@
 ---
 layout: roadtrip
 id: johannesburg-durban
-title: Colourful culture and remarkable scenery
+title: Johannesburg to Durban
 group: roadtrip
 group-order: 1
 
@@ -26,7 +26,6 @@ roadtrip:
 
     - title: Johannesburg
       id: johannesburg
-      drive-distance: 30 miles drive from Johannesburg
       highlights:
         - title: Liliesleaf Farm
         - title: Constitution Hill
@@ -38,7 +37,6 @@ roadtrip:
 
     - title: Isandlwana & Rorke’s Drift
       id: isandlwana
-      drive-distance: 30 miles drive from Isandlwana
       highlights:
         - title: Rorke’s Drift
         - title: Horseback tours
@@ -50,7 +48,6 @@ roadtrip:
 
     - title: Hluhluwe
       id: hluhluwe
-      drive-distance: 30 miles drive from Hluhluwe
       highlights:
         - title: iSimangaliso Wetland Park
         - title: DumaZulu Traditional Village
@@ -62,7 +59,6 @@ roadtrip:
 
     - title: St Lucia
       id: st-lucia
-      drive-distance: 30 miles drive from St Lucia
       highlights:
         - title: iGwalagwala Trail
         - title: Cape Vidal Snorkelling
@@ -73,7 +69,6 @@ roadtrip:
     - title: Nelson Mandela Capture Site
       id: nelson-mandela
       single-image: true
-      drive-distance: 30 miles drive from the Nelson Mandela Capture Site
       content: >
         <p>West of Durban lie the Midlands. Follow the R103 out of the city and discover the very spot where Nelson Mandela was captured by armed apartheid police, after 17 months on the run. This pivotal moment in the freedom struggle marked the beginning of Mandela’s lengthy imprisonment. The spot is recognized by a remarkable sculpture that signifies both Mandela’s disappearance and his return to the world.  </p>
 
