--- a/_pages/roadtrip/pilgrimsrest-kruger/index.html
+++ b/_pages/roadtrip/pilgrimsrest-kruger/index.html
@@ -1,7 +1,7 @@
 ---
 layout: roadtrip
 id: pilgrimsrest-kruger
-title: Dramatic landscapes and quaint towns
+title: Pilgrim’s Rest to Kruger
 group: roadtrip
 group-order: 3
 
@@ -24,14 +24,12 @@ roadtrip:
 
     - title: Pilgrim’s Rest
       id: pilgrims-rest
-      drive-distance: 30 miles drive
       highlights:
       content: >
         <p>This protected provincial heritage site offers you the chance to step back in time, to an age where gold rushes made fortunes and shattered dreams. The town grew around the discovery of alluvial gold, initially (and unsurprisingly) kept a secret by Alex Patterson in 1873. The secret got out and prospectors rushed to unpick the treasures of the land. A town quickly sprang to satiate the needs of the gold rush and its frontier-style buildings remain unchanged. Now, explore a range of arts & crafts shops, restaurants and photogenic churches at this quaint rest stop.</p>
 
     - title: Graskop
       id: graskop
-      drive-distance: 30 miles drive
       highlights:
         - title: Blyde River Canyon
         - title: Big Swing
@@ -45,7 +43,6 @@ roadtrip:
     - title: God’s Window
       id: gods-window
       single-image: true
-      drive-distance: 30 miles drive
       highlights:
         - title: Spot the Taita Falcon
       content: >
@@ -53,7 +50,6 @@ roadtrip:
 
     - title: Waterfalls
       id: waterfalls
-      drive-distance: 30 miles drive
       highlights:
         - title: Lisbon Waterfall
         - title: Berlin Waterfall
@@ -63,7 +59,6 @@ roadtrip:
 
     - title: Bourke’s Luck Potholes
       id: bourkes-luck-potholes
-      drive-distance: 30 miles drive
       highlights:
       content: >
         <p>Further up the valley from God’s Window lie Bourke’s Luck Potholes, a rather odd name for a rather enigmatic natural sight. This craterous landscape lies at the bottom of the deep gorge that forms the river canyon, with a collection of, well, potholes tucked deep into the foot of the gorge. Explore this oddity through a series of paths and bridges that offer great viewpoints over and above the holes. </p>
@@ -71,7 +66,6 @@ roadtrip:
     - title: Three Rondavels
       id: three-rondavels
       single-image: true
-      drive-distance: 30 miles drive
       highlights:
         - title: Viewpoint
       content: >
