crediting Craig on photos, offer update

--- a/_pages/roadtrip/capetown-portelizabeth/index.html
+++ b/_pages/roadtrip/capetown-portelizabeth/index.html
@@ -24,6 +24,9 @@ roadtrip:
 
     - title: Cape Town
       id: cape-town
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: Bo-Kaap
         - title: East City and Woodstock
@@ -34,6 +37,9 @@ roadtrip:
 
     - title: Winelands
       id: winelands
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: Cape Winelands
         - title: Paarl
@@ -43,13 +49,19 @@ roadtrip:
 
     - title: Mossel Bay
       id: mossel-bay
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: Hartenbos Beach
       content: >
-        <p>With the Cape Fold Mountains as your guide, head to the start of the famed Garden Route, with a stop at the gorgeous seaside town, Mossel Bay. It was the site of the first European landings in South Africa, a history told in the local museum. With the second mildest climate in the world, the long stretches of white sand beaches make for a replenishing stop. Plenty of hair-raising activities like skydiving are available locally, but if you want to take it easy, check out the market at Hartenbos Beach or set sail to nearby seal island – which, as the name suggests, is packed full of seals! Mossel Bay is a laidback port town that makes for a great stop before setting off to explore the picturesque Garden Route.</p>
+        <p>With the Cape Fold Mountains as your guide, head to the start of the famed Garden Route with a stop at the gorgeous seaside town, Mossel Bay. It was the site of the first European landings in South Africa, a history told in the local museum. With the second mildest climate in the world, the long stretches of white sand beaches make for a replenishing stop. Plenty of hair-raising activities like skydiving are available locally, but if you want to take it easy, check out the market at Hartenbos Beach or set sail to nearby seal island – which, as the name suggests, is packed full of seals! Mossel Bay is a laidback port town that makes for a great stop before setting off to explore the picturesque Garden Route.</p>
 
     - title: Wilderness
       id: wilderness
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: Victoria Bay
         - title: Dolphin’s Point
@@ -58,6 +70,9 @@ roadtrip:
 
     - title: Plettenberg safari
       id: plettenberg-safari
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: Game Reserve
         - title: Horseback rides
@@ -66,18 +81,24 @@ roadtrip:
 
     - title: Nature’s Valley
       id: natures-valley
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: Blourkran’s Bridge
       content: >
-        <p>As the name suggests, this tiny hamlet lies relatively untouched by, well anything really. No big developments, no flashy shopping malls – just a small collection of homes that curve around a beautiful shoreline. It’s a perfect base from which to explore the wild landscape that surrounds the village. Discover the rainforests that offer sanctuary to a noisy collection of wildlife, best explored with canopy tours that zipline through the dense thicket.</p>
+        <p>As the name suggests, this tiny hamlet lies relatively untouched by, well anything really. No big developments, no flashy shopping malls – just a small collection of homes that curve around a beautiful shoreline. It’s a perfect base from which to explore the wild landscape that surrounds the village, spanning Tsitsikamma National Park and Addo Elephant National Park. Discover the rainforests that offer sanctuary to a noisy collection of wildlife, best explored with canopy tours that zipline through the dense thicket.</p>
         <p>For a truly adrenaline-fuelled afternoon, don’t miss the highest bungee jump in the world at Blourkran’s Bridge. Two of every 10 people turn back from the edge – testament to how daring this jump really is. </p>
 
     - title: Port Elizabeth
       id: port-elizabeth
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: Whale and dolphin spotting
       content: >
-        <p>The final chapter of the Garden Route, Port Elizabeth is blessed with year-round sunshine and a collection of enviable beaches. It’s the perfect spot to reflect on the magnificent roadtrip you’ve just completed, sinking into the sands of the shoreline or trying some of the town’s new and hip eateries. Spot sharks, whales and dolphins just off the coast, or discover the great live music scene that the town fosters. For one last hoorah, head to the cool bars as the sun sinks, and wind down with locals in this up-and-coming city.  </p>
+        <p>The final chapter of the Garden Route, Port Elizabeth is blessed with year-round sunshine and a collection of enviable beaches. It’s the perfect spot to reflect on the magnificent roadtrip you’ve just completed, sinking into the sands of the shoreline or trying some of the town’s new and hip eateries. Spot sharks, whales and dolphins just off the coast which, alongside the excellent local game reserves, offer the chance to catch not just the Big Five but the Big Seven. Walk Route 67, an art trail dedicated to Nelson Mandela’s 67 years of service with a piece to commemorate each year. For one last hoorah, head to the cool bars to catch the excellent music scene as the sun sinks, and wind down with locals in this up-and-coming city. </p>
 
 
 
