--- a/_pages/roadtrip/index.html
+++ b/_pages/roadtrip/index.html
@@ -26,7 +26,7 @@ banner:
             <div class="roadtrip-tile__content text--white">
 
               <h4 class="title title--super title--xxxs title--bold">{{group-page.roadtrip.title}}</h4>
-              <h3 class="title title--sm">{{group-page.title}}</h3>
+              <h3 class="title title--sm">{{group-page.banner.title}}</h3>
 
               <ul class="list--lined">
                 <li><p><span class="text--bold">Time:</span> {{group-page.roadtrip.meta.time}}</p></li>
