--- a/_pages/roadtrip/johannesburg-durban/index.html
+++ b/_pages/roadtrip/johannesburg-durban/index.html
@@ -17,6 +17,7 @@ banner:
 roadtrip:
 
   title: Johannesburg to Durban
+  photo-credit: "© Copyright Craig Howes"
   meta:
     distance: 650 miles
     time: 7 days
@@ -26,6 +27,10 @@ roadtrip:
 
     - title: Johannesburg
       id: johannesburg
+      images:
+        - id: 1
+          credit: "© Copyright Craig Howes"
+        - id: 2
       highlights:
         - title: Liliesleaf Farm
         - title: Constitution Hill
@@ -37,6 +42,11 @@ roadtrip:
 
     - title: Isandlwana & Rorke’s Drift
       id: isandlwana
+      images:
+        - id: 1
+          credit: "© Copyright Craig Howes"
+        - id: 2
+          credit: "© Copyright Craig Howes"
       highlights:
         - title: Rorke’s Drift
         - title: Horseback tours
@@ -48,6 +58,11 @@ roadtrip:
 
     - title: Hluhluwe
       id: hluhluwe
+      images:
+        - id: 1
+          credit: "© Copyright Craig Howes"
+        - id: 2
+          credit: "© Copyright Craig Howes"
       highlights:
         - title: iSimangaliso Wetland Park
         - title: DumaZulu Traditional Village
@@ -59,21 +74,31 @@ roadtrip:
 
     - title: St Lucia
       id: st-lucia
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: iGwalagwala Trail
         - title: Cape Vidal Snorkelling
       content: >
-        <p>Here, in the heart of the wetlands estuary, St Lucia is a true gem. From here, you can explore the unique topography of the surrounding area, with the warm Indian Ocean on one side and the vast, eponymous lake stretching far into the north. The highest concentration of hippos and crocodiles reside in the outlying wetlands, which also teems with a host of other remarkable wildlife. Take a boat or a self-drive tour of the area, or stick close to the ocean and spot the dolphins and whales which play in the warm waters from mid-June to November. </p>
+        <p>Here, in the heart of the wetlands estuary, St Lucia is a true gem. From here, you can explore the unique topography of the surrounding area, with the warm Indian Ocean on one side and the vast, eponymous lake stretching far into the north. The highest concentration of hippos and crocodiles reside in the outlying wetlands, which also teems with a host of other remarkable wildlife. Take a boat or a self-drive tour of the area, or stick close to the ocean and spot the dolphins and whales which play in the warm waters from mid-June to November. From November on, huge leatherback and loggerhead turtles lay eggs along the beaches, the only spot in Africa that still offers nesting. Between January and March, watch the hatchlings emerge for a truly memorable encounter. </p>
         <p>Horse safaris and walks along the iGwalagwala Trail add to the myriad of ways to explore this fascinating area. Take a kayak to the water, spot the birdlife that sails across the wetlands, or head to Cape Vidal for great snorkelling opportunities at low tide. The beaches are veritable idylls, pulling the crowds in the summer. Yet for all its popularity, the area around St Lucia remains an unspoilt paradise for those that love untouched outdoor scenes.</p>
 
     - title: Nelson Mandela Capture Site
       id: nelson-mandela
-      single-image: true
+      images:
+        - id: 1
+          credit: "© Copyright Craig Howes"
       content: >
-        <p>West of Durban lie the Midlands. Follow the R103 out of the city and discover the very spot where Nelson Mandela was captured by armed apartheid police, after 17 months on the run. This pivotal moment in the freedom struggle marked the beginning of Mandela’s lengthy imprisonment. The spot is recognized by a remarkable sculpture that signifies both Mandela’s disappearance and his return to the world.  </p>
+        <p>West of Durban lie the Midlands. Follow the R103 out of the city and discover the very spot where Nelson Mandela was captured by armed apartheid police, after 17 months on the run. This pivotal moment in the freedom struggle marked the beginning of Mandela’s lengthy imprisonment. The spot is recognized by a remarkable sculpture that signifies both Mandela’s disappearance and his return to the world, alongside a museum which curates the history of this pivotal moment of the Freedom Struggle. </p>
 
     - title: Durban
       id: durban
+      images:
+        - id: 1
+          credit: "© Copyright Craig Howes"
+        - id: 2
+          credit: "© Copyright Craig Howes"
       highlights:
         - title: The Golden Mile
         - title: Markets
