--- a/_pages/roadtrip/pilgrimsrest-kruger/index.html
+++ b/_pages/roadtrip/pilgrimsrest-kruger/index.html
@@ -30,6 +30,9 @@ roadtrip:
 
     - title: Graskop
       id: graskop
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: Blyde River Canyon
         - title: Big Swing
@@ -42,7 +45,8 @@ roadtrip:
 
     - title: God’s Window
       id: gods-window
-      single-image: true
+      images:
+        - id: 1
       highlights:
         - title: Spot the Taita Falcon
       content: >
@@ -50,6 +54,9 @@ roadtrip:
 
     - title: Waterfalls
       id: waterfalls
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: Lisbon Waterfall
         - title: Berlin Waterfall
@@ -59,13 +66,17 @@ roadtrip:
 
     - title: Bourke’s Luck Potholes
       id: bourkes-luck-potholes
+      images:
+        - id: 1
+        - id: 2
       highlights:
       content: >
         <p>Further up the valley from God’s Window lie Bourke’s Luck Potholes, a rather odd name for a rather enigmatic natural sight. This craterous landscape lies at the bottom of the deep gorge that forms the river canyon, with a collection of, well, potholes tucked deep into the foot of the gorge. Explore this oddity through a series of paths and bridges that offer great viewpoints over and above the holes. </p>
 
     - title: Three Rondavels
       id: three-rondavels
-      single-image: true
+      images:
+        - id: 1
       highlights:
         - title: Viewpoint
       content: >
@@ -73,6 +84,9 @@ roadtrip:
 
     - title: Kruger self-drive Safari
       id: kruger
+      images:
+        - id: 1
+        - id: 2
       highlights:
         - title: The Big Five
         - title: Satara Camp
