final changes to the site adding things to guide pages

--- a/_pages/explore/nature/index.html
+++ b/_pages/explore/nature/index.html
@@ -31,6 +31,18 @@ subjects:
         </div>
       </div>
 
+      <div class="row">
+        <div class="row row--4-8-gutters row--vertical-align">
+          <div class="col">
+            <div class="bg-img bg-img--3-2" style="background-image: url('{{site.baseurl}}/img/content/nature/drakensberg.jpg');"></div>
+          </div>
+          <div class="col">
+            <h3 class="title title--md vpad-top--xs">Drakensberg</h3>
+            <p>This enigmatic stretch of piercing mountains spans 200km, cutting across KwaZulu Natal. Called the dragon mountains, their fierce name preludes the imposing figure they strike in the region. Trails wind through the peaks and troughs of this dramatic range, with views that leave a lasting impression. San rock paintings lie hidden on the walls of vast cave networks, adding to the ethereal quality of the landscape. Adrenaline-fuelled activities like rafting, abseiling and canopy tours satiate those with an appetite for daring adventure.</p>
+          </div>
+        </div>
+      </div>
+
   - title: Beaches
     content: |
       <div class="row row--6-6-gutters row--valign">
