--- a/_pages/roadtrip/pilgrimsrest-kruger/index.html
+++ b/_pages/roadtrip/pilgrimsrest-kruger/index.html
@@ -24,6 +24,9 @@ roadtrip:
 
     - title: Pilgrim’s Rest
       id: pilgrims-rest
+      images:
+        - id: 1
+        - id: 2
       highlights:
       content: >
         <p>This protected provincial heritage site offers you the chance to step back in time, to an age where gold rushes made fortunes and shattered dreams. The town grew around the discovery of alluvial gold, initially (and unsurprisingly) kept a secret by Alex Patterson in 1873. The secret got out and prospectors rushed to unpick the treasures of the land. A town quickly sprang to satiate the needs of the gold rush and its frontier-style buildings remain unchanged. Now, explore a range of arts & crafts shops, restaurants and photogenic churches at this quaint rest stop.</p>
