--- a/_pages/explore/food/index.html
+++ b/_pages/explore/food/index.html
@@ -62,6 +62,19 @@ subjects:
         <h3 class="title title--md vpad-top--xs">Eating out in Soweto</h3>
         <p>For a truly authentic township experience, let alone to sample some of the best eats around in the company of the most warm and welcoming people in the country, dining in Soweto makes for an unforgettable evening. For classic Soweto street food, stop off at Ntsitsi’s Fun Foods, a Soweto institution in the heart of Diepkloof which serves up Soweto-style kotas. Kota is a township version of bunny chow, made of a hollowed out loaf of bread packed with fries, Russian sausage, cold meat, mango atchar, sauces and cheese – often more. People travel far and wide for Ntsitsi’s. A better known food spot has to be  Sakhumzi’s. Set on the famous road that was home to both Desmond Tutu and Nelson Mandela, Sakhumzi serves up authentic township faves including tripe and lamb stew, and the place positively buzzes in the evenings. One final recommendation for township dining has to be the Jazz Maniacs restaurant at the Soweto Hotel and Conference Room. Prime time has to be the Sunday buffet barbeque, with live jazz band accompaniment out on the terrace.</p>
       </div>
+
+      <div class="row">
+        <div class="row row--4-8-gutters row--vertical-align">
+          <div class="col">
+            <div class="bg-img bg-img--3-2" style="background-image: url('{{site.baseurl}}/img/content/food/braai.jpg');"></div>
+          </div>
+          <div class="col">
+            <h3 class="title title--md vpad-top--xs">Braai</h3>
+            <p>Every South African knows about Braai. It’s the ultimate social occasion for friends and family to get together, as the barbecue simmers under the weight of meat, meat, and more meat. Braai exclusively uses wood and charcoal, with an open flame licking at juicy steaks, boerewors, sosaties and more. The atmosphere at these social gatherings are positively electric, so for a true taste of South African living, head to the nearest Braai!</p>
+          </div>
+        </div>
+      </div>
+
       <div class="row">
         <div class="row row--4-8-gutters row--vertical-align">
           <div class="col">
