--- a/_pages/index.html
+++ b/_pages/index.html
@@ -11,7 +11,7 @@ banner:
     <span class="banner__title--super title title--xxl title--np title--upper title--italic title--bold">Discover the real</span>
     <h1 class="banner__title title title--upper title--bold">South Africa</h1>
   intro: >
-    <p class="text--xxl text--shadow">A destination of variety, diversity, and vibrancy. Get closer to the African scene with your Secret Escapes video guide, and explore everything from savannah to city in this dedicated destination site</p>
+    <p class="text--xxl text--shadow">Unpick a diverse and vibrant land that leaves an indelible mark on any traveller. Get closer to the African scene with your Secret Escapes roadtrip guide and video, or browse through the highlights of this enigmatic country.</p>
     <a href="#section-roadtrips" class="btn btn--lg btn--solid">Start exploring</a>
 
 
@@ -34,7 +34,7 @@ video-id: EaD3n3Mvc2Q
 
     <div class="col text--white">
       <h4 class="title title--xl title--bold">Roadtrip <br />South Africa</h4>
-      <p class="text--lg text--italic">Discover the real South Africa with our guide to the best road trips across the country. From breathtaking outdoor wonders to fascinating cultural experiences, road tripping across this beguiling land makes for an unforgettable adventure.</p>
+      <p class="text--lg text--italic">Discover the real South Africa with our video and guide to the best road trips across the country. From breathtaking outdoor wonders to fascinating cultural experiences, road tripping across this beguiling land makes for an unforgettable adventure.</p>
     </div>
 
 
