--- a/_pages/roadtrip/index.html
+++ b/_pages/roadtrip/index.html
@@ -9,7 +9,7 @@ group-id: roadtrip
 banner:
   title: Roadtrips
   intro: >
-    <p class="text--xl">Discover the real South Africa with our guide to the best road trips across the country. From breathtaking outdoor wonders to fascinating cultural experiences, road tripping across this beguiling land makes for an unforgettable adventure.</p>
+    <p class="text--xl">Discover the real South Africa with our video and guide to the best road trips across the country. From breathtaking outdoor wonders to fascinating cultural experiences, road tripping across this beguiling land makes for an unforgettable adventure.</p>
 
 
 ---
