query to open modal
?modal=video

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -43,7 +43,7 @@ video-id: EaD3n3Mvc2Q
     =============================-->
 
     <div class="col">
-      <a href="javascript:void(0);" data-modal-id="modal-video" data-modal-item-id="video" data-video-id="{{page.video-id}}" class="js-open-modal roadtrip-video bg-img bg-img--16-9 bg-img--rounded bg-img--shadow" style="background-image: url({{site.baseurl}}/img/content/{{page.id}}/video.jpg);">
+      <a href="javascript:void(0);" data-modal-id="modal-video" data-modal-item-id="video" data-video-id="{{page.video-id}}" class="js-open-modal roadtrip-video bg-img bg-img--16-9 bg-img--lg-4-3 bg-img--xl-16-9 bg-img--rounded bg-img--shadow" style="background-image: url({{site.baseurl}}/img/content/{{page.id}}/video.jpg);">
         <span class="roadtrip-video__play"></span>
       </a>
     </div>
